# muslib

./: Cargo.toml  README.md
examples/: here.txt  loader.rs  synth.rs
examples/hpcp/: _essentia.py  _muslib.py  test.sh
examples/loader/: _essentia.py  _muslib.py  test.sh
examples/scripts/: README.md  diff.py  plot.py  plot_wav.py
examples/stft/: _essentia.py  _muslib.py  test.sh
src/: algs.rs  cli.rs  lib.rs  main.rs  mixer.rs  pymod.rs
src/algs/: hpcp.rs  io.rs  stft.rs  synth.rs
tests/: here.txt
