[package]
name = "muslib"
version = "0.1.0"
description = "Rust library for music synthesis and processing, inspired by Essentia."
license = "AGPL-3.0-or-later"
authors = ["Wiktor W. <wykwit@disroot.org>"]
repository = "https://gitlab.com/wykwit/muslib/"
readme = "README.md"
keywords = ["music"]
categories = ["multimedia::audio"]
edition = "2021"

[lib]
name = "muslib"
crate-type = ["lib", "cdylib"]

[dependencies]
hound = "3.5.1"
pyo3 = { version = "0.20.2", features = ["abi3-py311", "extension-module"] }
symphonia = "0.5.3"
